--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
   <head>
     <title>Lambda School Newsfeed</title>
     <link rel="stylesheet" type="text/css" media="screen" href="./CSS/index.css" />
-    <script src="./Menu/Menu.js" defer></script>
-    <script src="./Article/Article.js" defer></script>
+    
   </head>
   <body>
     <div class="header">
       <img class="menu-button" src="./assets/menu.png"/>
       <h1>Lambda School Newsfeed</h1>
     </div>
-    <div class="articles"></div>
+    <div class="content-container">
+      <div class="articles"></div>
+
+    </div>
+    
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="./Menu/Menu.js" defer></script>
+    <script src="./Article/Article.js" defer></script>
   </body>
 </html>
 <!-- Do not add anything to the HTML -->
